[package]
name = "gps_mocker"
version = "0.1.0"
description = "Send Mocked GPS to Android/iOS devices"
authors = ["dev@akylasfr"]
license = "MIT"
repository = "https://github.com/farfromrefug/gps_mocker"
default-run = "gps_mocker"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
tauri = { git = "https://github.com/tauri-apps/tauri", rev = "82b7f51", features = ["shell-execute", "shell-open"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"

[target."cfg(any(target_os = \"ios\", target_os = \"macos\"))".dependencies]
cocoa = "0.24"
objc = "0.2"
